apps/base/postgres/postgres-service.yaml
# apps/base/postgres/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: apps
  labels:
    app: postgres
spec:
  type: ClusterIP

  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres

  selector:
    app: postgres
